bouton previous et next modifé

--- a/photographer.html
+++ b/photographer.html
@@ -102,6 +102,6 @@
     <script src="scripts/factories/Factorymedia.js"></script>
     <script src="scripts/factories/Factorylightbox.js"></script>
     
-    <!-- <script src="/scripts/utils/contactForm.js"></script> -->
+    <script src="/scripts/utils/contactForm.js"></script>
   </body>
 </html>
