--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
-    <title>Fisheye</title>
+    <title>Fisheye - Accueil</title>
   </head>
 
   <body>
     <header>
-      <a href="index.html">
+      <a href="index.html" title="Fisheye">
         <img class="logo" src="assets/images/logo.png" alt="Logo de Fisheye - Aller à la page d'accueil"/>
       </a>
         <h1>Nos photographes</h1>
     </header>
 
-    
+    <!-- Liste des différents photographes -->
     <main id="main">
-        <div class="photographer_section"></div>
+        <div class="photographer_section" aria-label="liens-photographes"></div>
     </main>
 
 
