--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <link href="scss/style.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="scss/normalize.css" />
     <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/6b82c41e21.js" crossorigin="anonymous"></script>
     <title>Fisheye - Accueil</title>
   </head>
 
@@ -16,11 +17,10 @@
         <h1>Nos photographes</h1>
     </header>
 
-    <!-- Liste des différents photographes -->
+    <!-- Liste/grille des différents photographes -->
     <main id="main">
-        <div class="photographer_section" aria-label="liens-photographes"></div>
+        <section class="photographer_section" aria-label="liens-photographes"></section>
     </main>
-
 
     <script src="scripts/factories/Factoryphotographer.js"></script>
     <script src="scripts/pages/index.js"></script>
