--- a/photographer.html
+++ b/photographer.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <link href="scss/style.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="scss/normalize.css" />
     <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/6b82c41e21.js" crossorigin="anonymous"></script>
     <title>Fisheye - Page photographe </title>
@@ -48,7 +48,7 @@
               <h2 class="modal-contact">Contactez-moi</h2>
               <h2 class="name-photographer"></h2>
             </div>
-            <img class="modal-close-btn" src="assets/icons/close.svg" onclick="closeModal()" />
+            <img class="modal-close-btn" src="assets/icons/close.svg" onclick="closeModal()" alt="Icon de fermture de la modal"/>
           </header>
   
           <form
