ajout fonction pricePerDay

--- a/photographer.html
+++ b/photographer.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="total__price">
-          <p> 300€ / jour </p>
+          <p class="total-price"></p>
         </div>
       </div>
 
