aria-label modal

--- a/photographer.html
+++ b/photographer.html
@@ -41,7 +41,7 @@
       </aside>
 
       <!-- Modal de contact avec le photographe -->
-      <div id="contact_modal" aria-hidden="true" role="dialog" aria-labelledby="modale de contact">
+      <div id="contact_modal" aria-hidden="true" role="dialog" aria-label="modale de contact">
         <div class="modal">
           <header>
             <div class="modal-photographer">
